--- a/main-file/public/assets/css/style.css
+++ b/main-file/public/assets/css/style.css
@@ -25151,17 +25151,17 @@ body.theme-10 .team-lists img {
 .fc-event,
 .fc-event:not([href]) {
     color: #fff;
-    border-color: #51459d;
+    border-color: #ff5f2c;
     border-left-width: 4px;
     padding: 5px 10px;
     border-radius: 2px;
     margin-bottom: 5px;
-    cursor: move;
+    cursor: pointer;
 }
 
 .fc-event:not([class*="bg-"]),
   .fc-event:not([href]):not([class*="bg-"]) {
-    background-color: #51459d;
+    background-color: #ff5f2c;
 }
 
 .external-event {
