--- a/main-file/public/assets/css/style.css
+++ b/main-file/public/assets/css/style.css
@@ -25151,7 +25151,7 @@ body.theme-10 .team-lists img {
 .fc-event,
 .fc-event:not([href]) {
     color: #fff;
-    border-color: #378006;
+    border-color: #b2b2b2;
     border-left-width: 4px;
     padding: 5px 10px;
     border-radius: 2px;
